force-app/main/default/objects/Tenants_District360__c/Tenants_District360__c.object-meta.xml
<CustomObject>
    <description>Tenant occupant is the person or a company who is tentatively residing in the property.</description>
    <label>Tenants</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Tenant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tenants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>