force-app/main/default/objects/Tenants_District360__c/fields/Active_District360__c.field-meta.xml
<CustomField>
    <fullName>Active_District360__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be revealing the active status of the Tenant Occupant</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>