force-app/main/default/objects/Tenants_District360__c/fields/Lease_End_Date_District360__c.field-meta.xml
<CustomField>
    <fullName>Lease_End_Date_District360__c</fullName>
    <label>Lease End Date</label>
    <type>Date</type>
</CustomField>