force-app/main/default/objects/Tenants_District360__c/fields/Lease_Start_Date_District360__c.field-meta.xml
<CustomField>
    <fullName>Lease_Start_Date_District360__c</fullName>
    <label>Lease Start date</label>
    <type>Date</type>
</CustomField>