force-app/main/default/objects/Tenants_District360__c/fields/Phone_District360__c.field-meta.xml
<CustomField>
    <fullName>Phone_District360__c</fullName>
    <formula>IF(

NOT(ISBLANK(  Tenant_Contact_District360__c  )),  Tenant_Contact_District360__r.Phone,

IF(

NOT(ISBLANK(  Tenant_Account_District360__c )), Tenant_Account_District360__r.Phone,null


)

)</formula>
    <label>Tenant Phone</label>
    <type>Text</type>
</CustomField>