force-app/main/default/objects/Tenants_District360__c/fields/Property_District360__c.field-meta.xml
<CustomField>
    <fullName>Property_District360__c</fullName>
    <label>Property</label>
    <referenceTo>Property_District360__c</referenceTo>
    <relationshipName>Tenant_Occupancies_District360</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>