force-app/main/default/objects/Tenants_District360__c/fields/Tenant_Account_District360__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Account_District360__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tenant Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Tenant_Occupancies_District360</relationshipName>
    <type>Lookup</type>
</CustomField>