force-app/main/default/objects/Tenants_District360__c/fields/Tenant_Email_District360__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Email_District360__c</fullName>
    <formula>IF(

NOT(ISBLANK(  Tenant_Contact_District360__c  )),  Tenant_Contact_District360__r.Email,

IF(

NOT(ISBLANK(  Tenant_Account_District360__c )),  Tenant_Account_District360__r.Email_District360__c,null


)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenant Email</label>
    <type>Text</type>
</CustomField>