force-app/main/default/objects/Tenants_District360__c/fields/Total_Sq_Ft_Occupied_District360__c.field-meta.xml
<CustomField>
    <fullName>Total_Sq_Ft_Occupied_District360__c</fullName>
    <inlineHelpText>Total Square Footage Occupied cannot exceed the Total Square Footage of this property</inlineHelpText>
    <label>Total Square Footage Occupied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>