force-app/main/default/objects/Tenants_District360__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lease_Start_Date_District360__c</columns>
    <columns>Lease_End_Date_District360__c</columns>
    <columns>Active_District360__c</columns>
    <columns>Property_District360__c</columns>
    <columns>Tenant_Contact_District360__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>